--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-react-app": "^3.1.0",
+    "bootstrap": "^3.3.7",
     "dotenv": "^4.0.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.0",
@@ -17,5 +21,6 @@
     "build": "react-scripts build",
     "test": "standard --fix && react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "devDependencies": {}
 }
