--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^0.32.0",
     "react-burger-menu": "^2.2.3",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "react-stripe-checkout": "^2.6.3"
   },
