--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "mongoose": "^4.13.9",
     "stripe": "^5.4.0"
   },
   "devDependencies": {
