--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "NODE_ENV=dev nodemon index.js",
     "test": "standard --fix && echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
