--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "babel-preset-react-app": "^3.1.0",
     "bootstrap": "^3.3.7",
     "dotenv": "^4.0.0",
+    "fixer-io-node": "^1.0.2",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.0",
     "react-burger-menu": "^2.2.3",
