--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "backend",
+  "name": "Cherri",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "now-start": "node index.js",
     "start": "NODE_ENV=dev nodemon index.js",
     "test": "standard --fix && echo \"Error: no test specified\" && exit 1"
   },
@@ -20,5 +21,6 @@
   },
   "devDependencies": {
     "nodemon": "^1.14.8"
-  }
+  },
+  "port": 8080
 }
