--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "mongoose": "^4.13.9",
+    "nodemailer": "^4.4.1",
     "stripe": "^5.4.0"
   },
   "devDependencies": {
