--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "babel-loader": "^7.1.2",
     "babel-preset-react-app": "^3.1.0",
     "bootstrap": "^3.3.7",
+    "cloudinary": "^1.9.1",
+    "cloudinary-react": "^1.0.4",
     "dotenv": "^4.0.0",
     "fixer-io-node": "^1.0.2",
     "jwt-decode": "^2.2.0",
