--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "express-jwt": "^5.3.0",
     "express-session": "^1.15.6",
     "jsonwebtoken": "^8.1.0",
     "mocha": "^4.1.0",
