--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "jsonwebtoken": "^8.1.0",
+    "jwt-decode": "^2.2.0",
     "mocha": "^4.1.0",
     "mongoose": "^4.13.9",
     "nodemailer": "^4.4.1",
