--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^4.0.0",
     "fixer-io-node": "^1.0.2",
     "jwt-decode": "^2.2.0",
+    "node-notifier": "^5.2.1",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.0",
     "react-burger-menu": "^2.2.3",
