--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "cloudinary": "^1.9.1",
+    "node-notifier": "^5.2.1",
     "nodemailer": "^4.4.1",
     "react-transition-group": "1.x"
   }
